# ite-sdk

./: .gitignore  Kconfig  build.cmake  def.cmake
codec/flacdecode/: main.c
codec/mp3decode/: freqinfo.c  io.c  io.h  mp3_config.h  mp3decode.c  plugin.h
driver/RTL8304MB/: rtk_api.c  rtl8309n_asicdrv.c
driver/audio/: ite_audio.c  ite_audio_null.c
driver/capture/: CMakeLists.txt  cap_util.c  capture.c  capture_hw.c  device_sensor.c  device_video_old.c  io_sensor_ar0130.c  io_sensor_omnivision_ov7725.c  mmp_capture.c
driver/capture_module/: adv7180.c  capture_module.c  gc0308.c  gc0328.c  gt5110e1.c  hm1375.c  mmp_adv7180.c
driver/capture_s/: CMakeLists.txt
driver/encoder/: CMakeLists.txt  encoder_bitstream.c  encoder_hardware.c  mmp_encoder.c
driver/iic_sw/: CMakeLists.txt  iic.c  iic_sw.c
driver/isp/: CMakeLists.txt
driver/ith/: CMakeLists.txt  ith_cap.c  ith_card.c  ith_clock.c  ith_cmdq.c  ith_dma_axi.c  ith_isp.c  ith_jpeg.c  ith_openrtos.c  ith_pwm.c  ith_rtc.c  ith_uart.c  ith_usb.c  ith_video.c  ith_win32.c  ith_win32_spi.c
driver/itp/: CMakeLists.txt  itp_codec.c  itp_decompress.c  itp_error.c  itp_ethernet.c  itp_fat.c  itp_file.c  itp_gpio_expander.c  itp_i2c.c  itp_init_openrtos.c  itp_init_win32.c  itp_keypad.c  itp_lcdconsole.c  itp_nand.c  itp_ntfs.c  itp_osdconsole.c  itp_posix_openrtos.c  itp_posix_win32.c  itp_power.c  itp_rmalloc.c  itp_rtc.c  itp_screen.c  itp_sd.c  itp_socket.c  itp_spi.c  itp_stats.c  itp_stats_taskvcd.c  itp_uart.c  itp_usb.c  itp_usb_device.c  itp_usbd_fsg.c  itp_watchdog.c  itp_wiegand.c  itp_wifi.c
driver/itv/: CMakeLists.txt
driver/jpg/: ite_jpg.c  jpg_common.c  jpg_dec_mjpg.c  jpg_decoder.c  jpg_encoder.c  jpg_extern_link.c  jpg_hw.c  jpg_parser.c  jpg_stream_file.c  jpg_stream_mem.c
driver/linux/: timer.c
driver/m2d/: CMakeLists.txt
driver/mac/: CMakeLists.txt  mii.c
driver/nand/: NFDrv.c  NF_SPI_NAND.c  spinfdrv.c
driver/nor/: CMakeLists.txt
driver/sd/: CMakeLists.txt
driver/sensor/: CMakeLists.txt  ar0130_driver.c  mmp_sensor.c  omnivision_driver.c  omnivision_io.c
driver/spi/: CMakeLists.txt
driver/tso/: CMakeLists.txt  tso.c
driver/usb/: CMakeLists.txt  mmp_usbex.c
driver/usb/gadget/: Kconfig  ite_udc.c  udc.c  udc.h
driver/usb/gadget/fsg/: file_storage.c  fsg_desc.c
driver/usb/usb/hcd/: ehci_hcd.c
driver/video_encoder/: video_encoder.c  video_encoder_it9910.c
driver/vp/: CMakeLists.txt  mmp_vp.c  vp_hw.c
driver/wiegand/: wiegand.c
driver/xcpu_master/: CMakeLists.txt  bus.c  init9919_300_4M_1.h
include/: tslib.h
include/SDL/: SDL_touch.h
include/async_file/: string.h  timer.h
include/capture/: capture.h  capture_hw.h  capture_reg.h  capture_types.h  capture_util.h  mmp_capture.h  sensor_device_table.h  video_device_table.h
include/capture_module/: adv7180.h  gc0308.h  gt5110e1.h  hm1375.h
include/capture_s/: ite_capture.h
include/encoder/: config.h  encoder_types.h
include/fat/: fat.h  udefs_f.h
include/gfx/: gfx.h
include/i2s/: i2s.h
include/iic/: iic.h  mmp_iic.h
include/isp/: mmp_isp.h
include/ite/: audio.h  itc.h  ite_mac.h  ite_nand.h  (+13 more)
share/tc/: CMakeLists.txt  adpcm.c  rtpObject.c
share/tslib/: CMakeLists.txt
share/tslib/plugins/: ad7879-raw.c  ft5216-raw.c  ft5306-raw.c  ft5316-raw.c  ft5406-raw.c  gt911-raw.c  gt91135-raw.c  icn81xx-raw.c  icn85xx.h  icn85xx_flash.c  icn85xx_fw.h  it7260-raw.c  msg22s-raw.c  plugins.h  tsc2007-raw.c  variance.c  zt2083-raw.c  zt2083_inv-raw.c
share/tslib/src/: ts_load_module.c
(+340 files in other folders)
